Bug 429927 - Application icon (*.ico) is blurry and truncated in the search results (only)
Summary: Application icon (*.ico) is blurry and truncated in the search results (only)
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Launcher (Kickoff) widget (other bugs)
Version First Reported In: 5.20.3
Platform: Other Other
: NOR normal
Target Milestone: 1.0
Assignee: David Edmundson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-12-02 14:28 UTC by postix
Modified: 2021-03-02 00:37 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.80
Sentry Crash Report:


Attachments
Screenshot: Blurry and truncated (106.12 KB, image/jpeg)
2020-12-02 14:28 UTC, postix
Details
Screenshot: Looks fine in the favorites. (127.90 KB, image/jpeg)
2020-12-02 14:29 UTC, postix
Details
*.ico file used in the above described issue. (549.53 KB, image/x-icon)
2020-12-02 14:30 UTC, postix
Details
Screenshot: 5.21.1 new startmenu (92.04 KB, image/png)
2021-03-01 14:31 UTC, postix
Details

Note You need to log in before you can comment on or make changes to this bug.
Description postix 2020-12-02 14:28:20 UTC
Created attachment 133808 [details]
Screenshot: Blurry and truncated

SUMMARY

I manually added an entry for an application to the KickOff and used the appropiate *.ico file for the app's icon. It looks fine, but in the search it becomes blurry and the top and bottom are truncated.


STEPS TO REPRODUCE
1. Create a new menu entry
2. Select the *.ico file from the 2nd attachment

OBSERVED RESULT

Looks like in the screenshot.


EXPECTED RESULT

Looks fine in favorites and in it's category.

SOFTWARE/OS VERSIONS
Operating System: Manjaro Linux
KDE Plasma Version: 5.20.3
KDE Frameworks Version: 5.76.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION
Scaling: 2.0
Comment 1 postix 2020-12-02 14:29:03 UTC
Created attachment 133809 [details]
Screenshot: Looks fine in the favorites.
Comment 2 postix 2020-12-02 14:30:14 UTC
Created attachment 133810 [details]
*.ico file used in the above described issue.
Comment 3 Nate Graham 2020-12-03 05:27:18 UTC
How odd.
Comment 4 Nate Graham 2021-01-07 19:02:27 UTC
Can you see if this is fixed with the new Kickoff UI in Plasma 5.21 (currently in git master)? A lot of this code was rewritten which means there's a chance it got fixed in the process.

Thanks!
Comment 5 postix 2021-01-07 19:05:17 UTC
If I can either build the new KickOff without building all sorts of Plasma components with kdesrc build (which takes like half a day on my machine) I could try it or otherwise, I'll surely test it once 5.21 arrives for me. :)
Comment 6 Bug Janitor Service 2021-01-22 04:33:19 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 7 Bug Janitor Service 2021-02-06 04:33:17 UTC
This bug has been in NEEDSINFO status with no change for at least
30 days. The bug is now closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

Thank you for helping us make KDE software even better for everyone!
Comment 8 postix 2021-03-01 14:28:28 UTC
Still happening for me on

Operating System: Manjaro Linux
KDE Plasma Version: 5.21.1
KDE Frameworks Version: 5.79.0
Qt Version: 5.15.2
Graphics Platform: X11
Comment 9 postix 2021-03-01 14:31:01 UTC
Created attachment 136283 [details]
Screenshot: 5.21.1 new startmenu

In the favorites it looks fine!
Comment 10 Bug Janitor Service 2021-03-01 22:51:39 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/plasma-framework/-/merge_requests/205
Comment 11 Nate Graham 2021-03-02 00:36:49 UTC
Git commit 6ac6ff028e9baa9d7ae9f5d0e0666e468e77656b by Nate Graham, on behalf of Kai Uwe Broulik.
Committed on 02/03/2021 at 00:35.
Pushed by ngraham into branch 'master'.

[Icon Item] Load .ico files using QIcon

Loading it as a `QImage` just uses whatever first frame there is in the image
whereas `QIcon` has all the logic needed for interpreting `.ico` files and
picking the right pixmap for a given size.

M  +2    -1    src/declarativeimports/core/iconitem.cpp

https://invent.kde.org/frameworks/plasma-framework/commit/6ac6ff028e9baa9d7ae9f5d0e0666e468e77656b