[Icon Item] Load .ico files using QIcon

Loading it as a `QImage` just uses whatever first frame there is in the image
whereas `QIcon` has all the logic needed for interpreting `.ico` files and
picking the right pixmap for a given size.

BUG: 429927