src/declarativeimports/core/iconitem.cpp
@@ -347,7 +347,8 @@ void IconItem::setSource(const QVariant &source)
 
         if (!localFile.isEmpty()) {
             if (sourceString.endsWith(QLatin1String(".svg")) ||
-                sourceString.endsWith(QLatin1String(".svgz"))) {
+                sourceString.endsWith(QLatin1String(".svgz")) ||
+                sourceString.endsWith(QLatin1String(".ico"))) {
                 QIcon icon = QIcon(localFile);
                 m_iconItemSource.reset(new QIconSource(icon, this));
             } else {
